--- a/styles/style.css
+++ b/styles/style.css
@@ -3,3 +3,75 @@
   box-sizing:border-box;  
 }
 
+@import url("https://use.typekit.net/lqq6lwf.css");
+
+body{
+  font-family: futura-pt, sans-serif;
+  margin:0;
+
+}
+
+h2 {
+font-weight: 700;
+font-style: normal;
+text-transform: uppercase;
+}
+
+p {
+font-weight: 300;
+font-style: normal;
+}
+
+a {
+  font-weight: 300;
+  font-style: normal;
+  text-transform: uppercase;
+}
+
+.blok1 {
+position:relative;
+height: 100%;
+float: left;
+padding-bottom: 0px;
+padding: 2%;
+
+}
+
+div.tekstblok1 {
+  position: absolute;
+  right:0;
+  left: 0;
+  bottom:0;
+  padding:2em;
+ box-sizing: border-box;
+ width: 90%;
+ padding: 23px 20px;
+ padding-top:2px;
+margin-left: 25px;
+text-align: left;
+background-color: white;
+margin-bottom: 2em;
+  
+}
+
+.blok1 h2 {
+  
+  line-height: .9em;
+  font-size: 2em;
+}
+
+
+.blok1 p {
+  
+  line-height: .9em;
+  font-size: 1.5em;
+}
+
+.blok1 a {
+  background-color: #c1bdb9;
+  color: white;
+  box-sizing: border-box;
+  padding: 0.3em 0.3em;
+}
+
+
