--- a/styles/style.css
+++ b/styles/style.css
@@ -38,15 +38,15 @@ padding: 2%;
 }
 
 div.tekstblok1 {
-  position: absolute;
-  right:0;
-  left: 0;
-  bottom:0;
-  padding:2em;
- box-sizing: border-box;
- width: 90%;
- padding: 23px 20px;
- padding-top:2px;
+position: absolute;
+right:0;
+left: 0;
+bottom:0;
+padding:2em;
+box-sizing: border-box;
+width: 90%;
+padding: 23px 20px;
+padding-top:2px;
 margin-left: 25px;
 text-align: left;
 background-color: white;
@@ -56,7 +56,7 @@ margin-bottom: 2em;
 
 .blok1 h2 {
   
-  line-height: .9em;
+line-height: .9em;
   font-size: 2em;
 }
 
@@ -72,6 +72,71 @@ margin-bottom: 2em;
   color: white;
   box-sizing: border-box;
   padding: 0.3em 0.3em;
+  font-size: 0.8em;
 }
 
 
+.blok2 {
+  position:relative;
+  height: 100%;
+  float: left;
+  padding-bottom: 0em;
+  padding: 2%;
+}
+
+.blok2 h2 {
+  position: absolute;
+  right:0;
+  left: 0;
+  bottom:0;
+  box-sizing: border-box;
+  width: 90%;
+  padding: 22px 20px;
+  padding-top:10px;
+  padding-bottom: 10px;
+  margin-left: 14px;
+  text-align: left;
+  background-color: white;
+  margin-bottom: 2em;
+  font-weight: 500;
+  font-size: 1.1em;
+    
+  }
+
+  .blok3 {
+    position:relative;
+    height: 100%;
+    float: left;
+    padding-bottom: 0em;
+    padding: 2%;
+  }
+  
+  div.tekstblok3 {
+    position: absolute;
+    right:0;
+    left: 0;
+    bottom:0;
+    padding:2em;
+    box-sizing: border-box;
+    width: 90%;
+    padding: 23px 20px;
+    padding-top:2px;
+    margin-left: 15px;
+    text-align: left;
+    background-color: white;
+    margin-bottom: 2em;
+  }
+
+  .blok3 h2 {
+
+  font-weight: 500;
+  font-size: 1.1em;
+  }
+
+  .blok3 a {
+    background-color: #c1bdb9;
+    color: white;
+    box-sizing: border-box;
+    padding: 0.3em 0.3em;
+    font-size: 0.8em;
+  }
