--- a/styles/style.css
+++ b/styles/style.css
@@ -94,7 +94,7 @@ line-height: .9em;
   padding: 22px 20px;
   padding-top:10px;
   padding-bottom: 10px;
-  margin-left: 14px;
+  margin-left: 12px;
   text-align: left;
   background-color: white;
   margin-bottom: 2em;
@@ -121,7 +121,7 @@ line-height: .9em;
     width: 90%;
     padding: 23px 20px;
     padding-top:2px;
-    margin-left: 15px;
+    margin-left: 12px;
     text-align: left;
     background-color: white;
     margin-bottom: 2em;
@@ -140,3 +140,74 @@ line-height: .9em;
     padding: 0.3em 0.3em;
     font-size: 0.8em;
   }
+
+
+
+
+  .blok4 {
+    position:relative;
+    height: 100%;
+    float: left;
+    padding-bottom: 0em;
+    padding: 2%;
+  }
+  
+  div.tekstblok4 {
+    position: absolute;
+    right:0;
+    left: 0;
+    bottom:0;
+    padding:2em;
+    box-sizing: border-box;
+    width: 90%;
+    padding: 23px 20px;
+    padding-top:2px;
+    margin-left: 12px;
+    text-align: left;
+    background-color: white;
+    margin-bottom: 2em;
+  }
+
+  .blok4 h2 {
+
+  font-weight: 500;
+  font-size: 1.1em;
+  }
+
+  .blok4 a {
+    background-color: #c1bdb9;
+    color: white;
+    box-sizing: border-box;
+    padding: 0.3em 0.3em;
+    font-size: 0.8em;
+  }
+
+
+
+
+  .nieuwsbrief {
+    position:relative;
+    height: 100%;
+    float: left;
+    border-style: dotted;
+    
+  }
+
+  div.nieuwsbrieftekst {
+    position: absolute;
+   background-color: #f0eeec;
+   height: 19em;
+   width: 15em;
+   text-align: center;
+   text-transform: uppercase;
+  }
+
+  .nieuwsbrief a {
+
+    background-color: #60a180;
+    color: white;
+    box-sizing: border-box;
+    padding: 0.3em 3em;
+    font-size: 0.8em;
+  }
+
